# obs-cdi

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  obs-cdi.code-workspace
cmake/common/: bootstrap.cmake  buildnumber.cmake  buildspec_common.cmake  ccache.cmake  compiler_common.cmake  helpers_common.cmake  osconfig.cmake
cmake/linux/: compilerconfig.cmake  defaults.cmake  helpers.cmake
cmake/linux/toolchains/: aarch64-linux-clang.cmake  aarch64-linux-gcc.cmake  x86_64-linux-clang.cmake  x86_64-linux-gcc.cmake
cmake/macos/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake  xcode.cmake
cmake/macos/resources/: ccache-launcher-c.in  ccache-launcher-cxx.in  create-package.cmake.in  distribution.in  installer-macos.pkgproj.in
cmake/windows/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake
cmake/windows/resources/: installer-Windows.iss.in  resource.rc.in
locale/: en-US.ini
src/: Config.cpp  Config.h  main-output.cpp  main-output.h  obs-cdi-formats.h  obs-cdi-output.cpp  obs-cdi-output.h  obs-cdi-source.cpp  obs-cdi.cpp  obs-cdi.h  output-settings.cpp  output-settings.h  output-settings.ui
